# sbrun

./: .gitignore  Cargo.toml  DEV.md  Makefile  README.md  install.sh  pyproject.toml  sbbash.c  sbbash.default.conf  sbbash.pl  sbrun.c  sbrun.default.conf  sbrun.default.linux.toml  sbrun.default.macos.toml  sbrun.pl  setup.py
.github/workflows/: release.yml  test.yml
src/: admin.rs  cli.rs  config.rs  error.rs  host.rs  lib.rs  main.rs  pathutil.rs  profile.rs  prompt.rs  sandbox.rs  sandbox_linux.rs  sandbox_macos.rs
tests/: cli.sh  test_run.py  test_sbbash.py  test_sbrun.py
tools/: bump.sh  local-build.sh  pypi.py  release.sh  test.sh
