[package]
name = "sbrun"
version = "0.0.13"
edition = "2024"
rust-version = "1.91"
description = "Run commands in a sandbox with writes confined to selected paths"
license = "MIT"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "sbrun"
path = "src/main.rs"

[dependencies]
libc = ">=0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = ">=0.9"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[lints.clippy]
too_many_arguments = "allow"
