[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "sbrun"
dynamic = ["version"]
description = "Run commands under the macOS sandbox with writes confined to selected paths"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Environment :: Console",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Security",
  "Topic :: Utilities",
]

[project.scripts]
sbrun = "sbrun:_cli_main"

[tool.maturin]
bindings = "pyo3"
