[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "sbrun"
dynamic = ["version"]
description = "Run commands in a sandbox with writes confined to selected paths"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Environment :: Console",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Security",
  "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
  "fastship>=0.0.11",
  "maturin>=1.8,<2",
  "pytest>=8",
]

[tool.maturin]
bindings = "bin"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.fastship]
branch = "main"
